About section changes

--- a/index.html
+++ b/index.html
@@ -194,19 +194,20 @@
             <div class="about-me">
               <h4>About me</h4>
               <p>
-                I am a final year student at the North-West University. I study BSc Information technology,
-                with a background in mathematics and physics. I am a hard-working individual open to continuous learning.
+                I am a final year student at the North-West University. I study BSc Information Technology.
+                I am a hard-working individual open to continuous learning.
                 I enjoy problem-solving and have a strong foundation in algorithms and data structures,
                 which I utilize to write clean and optimized code.
-
-                When I’m not coding, you can find me watching football, exploring new music,
-                going to the gym, or spending quality time with my friends and family.
-                I believe in maintaining a well-rounded life and draw inspiration from various sources to
-                fuel my creativity and problem-solving abilities.
               </p>
               <p>
                 I am committed to delivering excellent work within the required time.
                 And I enjoy working in a team toward a common goal.
+              </p>
+              <p>
+                When I’m not coding, you can find me watching football, exploring new music,
+                going to the gym, or spending time with my friends and family.
+                I believe in maintaining a well-rounded life and draw inspiration from various sources to
+                fuel my creativity and problem-solving abilities.
               </p>
             </div>
           </div>
