--- a/index.html
+++ b/index.html
@@ -181,6 +181,20 @@
               </div><!-- End Skills Item -->
 
               <div class="progress">
+                <span class="skill"><span>HTML</span> <i class="val">30%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="30"></div>
+                </div>
+              </div><!-- End Skills Item -->
+
+              <div class="progress">
+                <span class="skill"><span>CSS</span> <i class="val">30%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="30"></div>
+                </div>
+              </div><!-- End Skills Item -->
+
+              <div class="progress">
                 <span class="skill"><span>Git</span> <i class="val">50%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
