--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Rikus du Plessis</title>
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 
+
+
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -34,9 +36,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <h1 class="sitename">Virtual Portfolio</h1>
+        <!--        <h1 class="sitename">Virtual Portfolio</h1>-->
       </a>
-
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
@@ -63,9 +64,12 @@
       <img src="assets/img/hero-img.jpg" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
+
         <h2>Rikus du Plessis</h2>
         <p><span class="typed" data-typed-items="Software Developer"></span></p>
       </div>
+
+
 
     </section><!-- /Hero Section -->
 
@@ -118,32 +122,71 @@
 
       </div>
     </section><!-- End Interests Section -->
-
     <!-- About Section -->
+
+
+
     <section id="about" class="about section">
-
+<!--      <div class="section-title" data-aos="fade-up">-->
+<!--        <h2>About me</h2>-->
+<!--        <p></p>-->
+<!--      </div>-->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="section-title" data-aos="fade-up">
+          <h2>About me</h2>
 
-        <div class="row gy-4">
-          <div class="col-md-6">
+        </div>
+        <!-- Section Title -->
 
-            <div class="row justify-content-between gy-4">
-              <div class="col-lg-5">
-                <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="col-lg-7 about-info">
-                <p><strong>Name: </strong> <span>Rikus du Plessis</span></p>
-                <p><strong>Profile: </strong> <span>Software developer</span></p>
-                <p><strong>Degree: </strong> <span>BSc Information Technology</span></p>
-                <p><strong>Email: </strong> <span>Rikussduplessis@gmail.com</span></p>
-                <p><strong>City: </strong> <span>Potchefstroom</span></p>
+
+        <!-- Personal Info -->
+        <section>
+        <div class="personal-info">
+          <div class="row gy-4">
+            <div class="col-md-6">
+              <div class="row justify-content-between gy-4">
+                <div class="col-lg-5">
+                  <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-7 about-info">
+                  <p><strong>Name: </strong> <span>Rikus du Plessis</span></p>
+                  <p><strong>Profile: </strong> <span>Software developer</span></p>
+                  <p><strong>Degree: </strong> <span>BSc Information Technology</span></p>
+                  <p><strong>Email: </strong> <span>Rikussduplessis@gmail.com</span></p>
+                  <p><strong>City: </strong> <span>Potchefstroom</span></p>
+                </div>
               </div>
             </div>
+          </div>
+        </div>
+    </section>
+        <!-- About Me -->
+        <div class="about-me">
+          <h4>Who am I?</h4>
+          <p>
+            I am a final year student at the North-West University. I study BSc Information Technology.
+            I am a hard-working individual open to continuous learning.
+            I enjoy problem-solving and have a strong foundation in algorithms and data structures,
+            which I utilize to write clean and optimized code.
+          </p>
+          <p>
+            I am committed to delivering excellent work within the required time.
+            And I enjoy working in a team toward a common goal.
+          </p>
+          <p>
+            When I’m not coding, you can find me watching football, exploring new music,
+            going to the gym, or spending time with my friends and family.
+            I believe in maintaining a well-rounded life and draw inspiration from various sources to
+            fuel my creativity and problem-solving abilities.
+          </p>
+        </div>
 
-            <div class="skills-content skills-animation">
+        <!-- Skills -->
+        <div class="skills-content skills-animation">
+          <h5>Skills</h5>
 
-              <h5>Skills</h5>
-
+          <div class="row">
+            <div class="col-md-6">
               <div class="progress">
                 <span class="skill"><span>Java</span> <i class="val">65%</i></span>
                 <div class="progress-bar-wrap">
@@ -171,8 +214,9 @@
                   <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
                 </div>
               </div><!-- End Skills Item -->
+            </div>
 
-
+            <div class="col-md-6">
               <div class="progress">
                 <span class="skill"><span>SQL</span> <i class="val">50%</i></span>
                 <div class="progress-bar-wrap">
@@ -200,29 +244,6 @@
                   <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
                 </div>
               </div><!-- End Skills Item -->
-
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="about-me">
-              <h4>About me</h4>
-              <p>
-                I am a final year student at the North-West University. I study BSc Information Technology.
-                I am a hard-working individual open to continuous learning.
-                I enjoy problem-solving and have a strong foundation in algorithms and data structures,
-                which I utilize to write clean and optimized code.
-              </p>
-              <p>
-                I am committed to delivering excellent work within the required time.
-                And I enjoy working in a team toward a common goal.
-              </p>
-              <p>
-                When I’m not coding, you can find me watching football, exploring new music,
-                going to the gym, or spending time with my friends and family.
-                I believe in maintaining a well-rounded life and draw inspiration from various sources to
-                fuel my creativity and problem-solving abilities.
-              </p>
             </div>
           </div>
         </div>
@@ -230,6 +251,120 @@
       </div>
 
     </section><!-- /About Section -->
+
+<!--    &lt;!&ndash; About Section &ndash;&gt;-->
+<!--    <section id="about" class="about section">-->
+
+
+<!--      <div class="container" data-aos="fade-up" data-aos-delay="100">-->
+
+<!--        <div class="row gy-4">-->
+<!--          <div class="col-md-6">-->
+
+<!--            <div class="row justify-content-between gy-4">-->
+<!--              <div class="col-lg-5">-->
+<!--                <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">-->
+<!--              </div>-->
+<!--              <div class="col-lg-7 about-info">-->
+<!--                <p><strong>Name: </strong> <span>Rikus du Plessis</span></p>-->
+<!--                <p><strong>Profile: </strong> <span>Software developer</span></p>-->
+<!--                <p><strong>Degree: </strong> <span>BSc Information Technology</span></p>-->
+<!--                <p><strong>Email: </strong> <span>Rikussduplessis@gmail.com</span></p>-->
+<!--                <p><strong>City: </strong> <span>Potchefstroom</span></p>-->
+<!--              </div>-->
+<!--            </div>-->
+
+<!--            <div class="skills-content skills-animation">-->
+
+<!--              <h5>Skills</h5>-->
+
+<!--              <div class="progress">-->
+<!--                <span class="skill"><span>Java</span> <i class="val">65%</i></span>-->
+<!--                <div class="progress-bar-wrap">-->
+<!--                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="65"></div>-->
+<!--                </div>-->
+<!--              </div>&lt;!&ndash; End Skills Item &ndash;&gt;-->
+
+<!--              <div class="progress">-->
+<!--                <span class="skill"><span>C#</span> <i class="val">50%</i></span>-->
+<!--                <div class="progress-bar-wrap">-->
+<!--                  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>-->
+<!--                </div>-->
+<!--              </div>&lt;!&ndash; End Skills Item &ndash;&gt;-->
+
+<!--              <div class="progress">-->
+<!--                <span class="skill"><span>C++</span> <i class="val">50%</i></span>-->
+<!--                <div class="progress-bar-wrap">-->
+<!--                  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>-->
+<!--                </div>-->
+<!--              </div>&lt;!&ndash; End Skills Item &ndash;&gt;-->
+
+<!--              <div class="progress">-->
+<!--                <span class="skill"><span>Python</span> <i class="val">50%</i></span>-->
+<!--                <div class="progress-bar-wrap">-->
+<!--                  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>-->
+<!--                </div>-->
+<!--              </div>&lt;!&ndash; End Skills Item &ndash;&gt;-->
+
+
+<!--              <div class="progress">-->
+<!--                <span class="skill"><span>SQL</span> <i class="val">50%</i></span>-->
+<!--                <div class="progress-bar-wrap">-->
+<!--                  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>-->
+<!--                </div>-->
+<!--              </div>&lt;!&ndash; End Skills Item &ndash;&gt;-->
+
+<!--              <div class="progress">-->
+<!--                <span class="skill"><span>HTML</span> <i class="val">30%</i></span>-->
+<!--                <div class="progress-bar-wrap">-->
+<!--                  <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="30"></div>-->
+<!--                </div>-->
+<!--              </div>&lt;!&ndash; End Skills Item &ndash;&gt;-->
+
+<!--              <div class="progress">-->
+<!--                <span class="skill"><span>CSS</span> <i class="val">30%</i></span>-->
+<!--                <div class="progress-bar-wrap">-->
+<!--                  <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="30"></div>-->
+<!--                </div>-->
+<!--              </div>&lt;!&ndash; End Skills Item &ndash;&gt;-->
+
+<!--              <div class="progress">-->
+<!--                <span class="skill"><span>Git</span> <i class="val">50%</i></span>-->
+<!--                <div class="progress-bar-wrap">-->
+<!--                  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>-->
+<!--                </div>-->
+<!--              </div>&lt;!&ndash; End Skills Item &ndash;&gt;-->
+
+<!--            </div>-->
+<!--          </div>-->
+
+<!--          <div class="col-md-6">-->
+<!--            <div class="about-me">-->
+
+<!--              <h4>About me</h4>-->
+<!--              <p>-->
+<!--                I am a final year student at the North-West University. I study BSc Information Technology.-->
+<!--                I am a hard-working individual open to continuous learning.-->
+<!--                I enjoy problem-solving and have a strong foundation in algorithms and data structures,-->
+<!--                which I utilize to write clean and optimized code.-->
+<!--              </p>-->
+<!--              <p>-->
+<!--                I am committed to delivering excellent work within the required time.-->
+<!--                And I enjoy working in a team toward a common goal.-->
+<!--              </p>-->
+<!--              <p>-->
+<!--                When I’m not coding, you can find me watching football, exploring new music,-->
+<!--                going to the gym, or spending time with my friends and family.-->
+<!--                I believe in maintaining a well-rounded life and draw inspiration from various sources to-->
+<!--                fuel my creativity and problem-solving abilities.-->
+<!--              </p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--      </div>-->
+
+<!--    </section>&lt;!&ndash; /About Section &ndash;&gt;-->
 
     <!-- Resume Section -->
     <section id="resume" class="resume section">
@@ -377,13 +512,24 @@
 
             <div class="col-lg-4">
               <div class="info-item d-flex align-items-center">
+                <div class="icon"><i class="bx bx-pin"></i></div>
+                <div>
+                  <h3>Location</h3>
+                  <p>Potchefstroom</p>
+                </div>
+              </div>
+            </div><!-- End Info Item -->
+
+            <div class="col-lg-4">
+              <div class="info-item d-flex align-items-center">
                 <div class="icon"><i class="bx bx-envelope"></i></div>
                 <div>
-                  <h3>Email Us</h3>
+                  <h3>Email</h3>
                   <p>Rikussduplessis@gmail.com</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
+
           </div>
         </div>
       </div>
