--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 
         <!-- Personal Info -->
         <section>
-        <div class="personal-info">
-          <div class="row gy-4">
+        <div class="personal-info ">
+          <div class="row gy-4 justify-content-center">
             <div class="col-md-6">
               <div class="row justify-content-between gy-4">
                 <div class="col-lg-5">
