added a download cv part and github projects

--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
           <li><a href="#interests">Interest</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
-
-
-
-
+          <li><a href="#resume">CV</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -365,6 +362,43 @@
       </div>
 
     </section><!-- /Resume Section -->
+
+
+
+    <!-- Download CV and My Projects Section -->
+    <section id="cv-and-projects" class="cv-and-projects section">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Resources</h2>
+          <p>Explore my CV and projects below.</p>
+        </div>
+        <div class="row">
+
+          <!-- Download CV -->
+          <div class="col-md-6 mb-4">
+            <div class="text-center">
+              <h3>Download CV</h3>
+              <p>Click the button below to download my CV.</p>
+              <a href="assets/CV/YourCV.pdf" class="btn btn-primary" download="Rikus_du_Plessis_CV.pdf">
+                <i class="bx bx-download"></i> Download CV
+              </a>
+            </div>
+          </div>
+
+          <!-- My Projects -->
+          <div class="col-md-6 mb-4">
+            <div class="text-center">
+              <h3>My Projects</h3>
+              <p>Explore my projects on GitHub to see my work and contributions.</p>
+              <a href="https://github.com/your-github-username" class="btn btn-primary" target="_blank">
+                <i class="bx bxl-github"></i> Visit My GitHub
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
 
     <!-- Contact Section -->
