Fixed the linked in and github issue

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <div class="text-center">
               <h3>My Projects</h3>
               <p>Explore my projects on GitHub to see my work and contributions.</p>
-              <a href="https://github.com/your-github-username" class="btn btn-primary" target="_blank">
+              <a href="https://github.com/Rikus7" class="btn btn-primary" target="_blank">
                 <i class="bx bxl-github"></i> Visit My GitHub
               </a>
             </div>
@@ -426,12 +426,13 @@
               </div>
             </div><!-- End Info Item -->
 
+            <!-- LinkedIn Info Item -->
             <div class="col-lg-4">
               <div class="info-item d-flex align-items-center">
-                <div class="icon"><i class="bx bx-pin"></i></div>
+                <div class="icon"><i class="bx bxl-linkedin"></i></div>
                 <div>
-                  <h3>Location</h3>
-                  <p>Potchefstroom</p>
+                  <h3>LinkedIn</h3>
+                  <a href="https://www.linkedin.com/in/rikus-du-plessis-990972255/" target="_blank">View Profile</a>
                 </div>
               </div>
             </div><!-- End Info Item -->
