--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li><a href="#interests">Interest</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
-          <li><a href="#resume">CV</a></li>
+          <li><a href="#resources">Resources</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -54,6 +54,8 @@
   </header>
 
   <main class="main">
+
+
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
@@ -364,9 +366,8 @@
     </section><!-- /Resume Section -->
 
 
-
     <!-- Download CV and My Projects Section -->
-    <section id="cv-and-projects" class="cv-and-projects section">
+    <section id="resources" class="resources section">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Resources</h2>
@@ -375,6 +376,7 @@
         <div class="row">
 
           <!-- Download CV -->
+
           <div class="col-md-6 mb-4">
             <div class="text-center">
               <h3>Download CV</h3>
@@ -386,6 +388,7 @@
           </div>
 
           <!-- My Projects -->
+
           <div class="col-md-6 mb-4">
             <div class="text-center">
               <h3>My Projects</h3>
@@ -395,6 +398,7 @@
               </a>
             </div>
           </div>
+
         </div>
       </div>
     </section>
