--- a/index.html
+++ b/index.html
@@ -284,141 +284,6 @@
           </div>
       </section>
 
-<!--      </section>&lt;!&ndash; /About Section &ndash;&gt;-->
-<!--    &lt;!&ndash; About Section &ndash;&gt;-->
-<!--    <section id="about" class="about section">-->
-<!--      <div class="container" data-aos="fade-up" data-aos-delay="100">-->
-<!--        <div class="section-title" data-aos="fade-up">-->
-<!--          <h2>About me</h2>-->
-<!--        </div>-->
-
-<!--        &lt;!&ndash; Top Row: Personal Info and Who Am I &ndash;&gt;-->
-<!--        <div class="row mb-5">-->
-<!--          &lt;!&ndash; Left Column: Photo and Personal Info &ndash;&gt;-->
-<!--          <div class="col-lg-5">-->
-<!--            <div class="personal-info">-->
-<!--              <img src="assets/img/profile-img.jpg" class="img-fluid mb-4" alt="">-->
-<!--              <div class="about-info">-->
-<!--                <p><strong>Name: </strong> <span>Rikus du Plessis</span></p>-->
-<!--                <p><strong>Profile: </strong> <span>Software developer</span></p>-->
-<!--                <p><strong>Degree: </strong> <span>BSc Information Technology</span></p>-->
-<!--                <p><strong>Email: </strong> <span>Rikussduplessis@gmail.com</span></p>-->
-<!--                <p><strong>City: </strong> <span>Pretoria</span></p>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-
-<!--          &lt;!&ndash; Right Column: Who am I? &ndash;&gt;-->
-<!--          <div class="col-lg-7">-->
-<!--            <div class="about-me">-->
-<!--              <h4>Who am I?</h4>-->
-<!--              <p>-->
-<!--                I am a graduate software developer. I studied BSc Information Technology at the North-West University.-->
-<!--                I am a hard-working individual open to continuous learning.-->
-<!--                I enjoy problem-solving and have a strong foundation in algorithms and data structures,-->
-<!--                which I utilize to write clean and optimized code.-->
-<!--              </p>-->
-<!--              <p>-->
-<!--                I am committed to delivering excellent work within the required time.-->
-<!--                And I enjoy working in a team toward a common goal.-->
-<!--              </p>-->
-<!--              <p>-->
-<!--                When I'm not coding, you can find me watching football,-->
-<!--                going to the gym, or spending time with my friends and family.-->
-<!--                I believe in maintaining a well-rounded life and draw inspiration from various sources to-->
-<!--                fuel my creativity and problem-solving abilities.-->
-<!--              </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-
-<!--        &lt;!&ndash; Bottom Row: Skills &ndash;&gt;-->
-<!--        <div class="row">-->
-<!--          <div class="col-12">-->
-<!--            <div class="skills-content skills-animation">-->
-<!--              <h5>Skills</h5>-->
-<!--              <div class="row">-->
-<!--                <div class="col-md-6">-->
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>Spring Boot</span> <i class="val">80%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="70"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>React</span> <i class="val">65%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="70"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>Java</span> <i class="val">80%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="85"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>C#</span> <i class="val">70%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="70"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>C++</span> <i class="val">60%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>Python</span> <i class="val">50%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-
-<!--                <div class="col-md-6">-->
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>SQL</span> <i class="val">60%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>HTML</span> <i class="val">50%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="40"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>CSS</span> <i class="val">50%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="40"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-
-<!--                  <div class="progress">-->
-<!--                    <span class="skill"><span>Git</span> <i class="val">60%</i></span>-->
-<!--                    <div class="progress-bar-wrap">-->
-<!--                      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-
-<!--      </div>-->
-
-
     <!-- Resume Section -->
     <section id="resume" class="resume section">
 
@@ -485,6 +350,16 @@
 
 
             </div><!-- Edn Resume Item -->
+
+              <div class="resume-item">
+                  <h4>Projects</h4>
+                  <h5>2024</h5>
+                  <p><em>Full Stack Educational Resource Platform</em></p>
+                  <p><em>Developed a scalable web platform enabling educators and students to
+                      upload, manage, and share academic resources.
+                      We used React, Spring Boot, and PostgreSQL for development. </em></p>
+
+              </div><!-- Edn Resume Item -->
 
           </div>
 
