Updated gitignore file

--- a/index.html
+++ b/index.html
@@ -416,42 +416,60 @@
 
     </section><!-- /Resume Section -->
 
+      <!-- Download CV Section -->
+      <section id="resources" class="resources section">
+          <div class="container text-center" data-aos="fade-up">
+              <div class="section-title">
+                  <h2>Resources</h2>
+              </div>
 
-    <!-- Download CV and My Projects Section -->
-    <section id="resources" class="resources section">
-      <div class="container" data-aos="fade-up">
-        <div class="section-title">
-          <h2>Resources</h2>
-        </div>
-        <div class="row">
-
-          <!-- Download CV -->
-
-          <div class="col-md-6 mb-4">
-            <div class="text-center">
-              <h3>Download CV</h3>
-              <p>Click the button below to download my CV.</p>
-              <a href="assets/cv/Rikus_du_Plessis_CV.pdf" class="btn btn-primary" download="Rikus_du_Plessis_CV.pdf">
-                <i class="bx bx-download"></i> Download CV
-              </a>
-            </div>
+              <!-- Centered Download CV -->
+              <div class="col-md-12 mb-4">
+                  <div class="text-center">
+                      <h3>Download CV</h3>
+                      <p>Click the button below to download my CV.</p>
+                      <a href="assets/cv/Rikus_du_Plessis_CV.pdf" class="btn btn-primary" download="Rikus_du_Plessis_CV.pdf">
+                          <i class="bx bx-download"></i> Download CV
+                      </a>
+                  </div>
+              </div>
           </div>
+      </section>
+<!--    &lt;!&ndash; Download CV and My Projects Section &ndash;&gt;-->
+<!--    <section id="resources" class="resources section">-->
+<!--      <div class="container" data-aos="fade-up">-->
+<!--        <div class="section-title">-->
+<!--          <h2>Resources</h2>-->
+<!--        </div>-->
+<!--        <div class="row">-->
 
-          <!-- My Projects -->
+<!--          &lt;!&ndash; Download CV &ndash;&gt;-->
 
-          <div class="col-md-6 mb-4">
-            <div class="text-center">
-              <h3>My Projects</h3>
-              <p>Explore my projects on GitHub to see my work and contributions.</p>
-              <a href="https://github.com/Rikus7" class="btn btn-primary" target="_blank">
-                <i class="bx bxl-github"></i> Visit My GitHub
-              </a>
-            </div>
-          </div>
+<!--          <div class="col-md-6 mb-4">-->
+<!--            <div class="text-center">-->
+<!--              <h3>Download CV</h3>-->
+<!--              <p>Click the button below to download my CV.</p>-->
+<!--              <a href="assets/cv/Rikus_du_Plessis_CV.pdf" class="btn btn-primary" download="Rikus_du_Plessis_CV.pdf">-->
+<!--                <i class="bx bx-download"></i> Download CV-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
 
-        </div>
-      </div>
-    </section>
+<!--          &lt;!&ndash; My Projects &ndash;&gt;-->
+
+<!--          <div class="col-md-6 mb-4">-->
+<!--            <div class="text-center">-->
+<!--              <h3>My Projects</h3>-->
+<!--              <p>Explore my projects on GitHub to see my work and contributions.</p>-->
+<!--              <a href="https://github.com/Rikus7" class="btn btn-primary" target="_blank">-->
+<!--                <i class="bx bxl-github"></i> Visit My GitHub-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
+
+<!--        </div>-->
+<!--      </div>-->
+<!--    </section>-->
 
 
 
