Updated gitignore file

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-rocket"></i></div>
               <h4 class="title"><a href="">Stargazing</a></h4>
-              <p class="description">Under the night sky, I lose myself in the endless expanse of the cosmos, finding solace and wonder among the stars.</p>
+              <p class="description">On clear nights, you’ll find me with my telescope, gazing at the stars.
+                  Exploring planets, constellations, and distant galaxies. </p>
             </div>
           </div>
 
@@ -108,7 +109,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-football"></i></div>
               <h4 class="title"><a href="">Footbal</a></h4>
-              <p class="description">Passionate about watching my football team</p>
+              <p class="description">Passionate about watching my football team.</p>
             </div>
           </div>
 
@@ -116,7 +117,8 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-headphone"></i></div>
               <h4 class="title"><a href="">Music</a></h4>
-              <p class="description">Music takes me away to realms unseen, where every note creates a universe of its own</p>
+              <p class="description">Music takes me away to realms unseen,
+                  where every note creates a universe of its own.</p>
             </div>
           </div>
         </div>
@@ -309,22 +311,6 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</h4>
-              <h5>2021 - 2024</h5>
-              <p><em>North West University</em></p>
-              <p>During my studies in Information Technology,
-                I gained exposure to various technologies and developed a wide range of skills. Some key modules were</p>
-              <ul>
-                <li>Spring Boot</li>
-                <li>React</li>
-                <li>Java</li>
-                <li>C++</li>
-                <li>C#</li>
-                <li>SQL</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
               <h4>BACHELOR OF SCIENCE WITH APPLIED MATHEMATICS AND PHYSICS</h4>
               <h5>2019 - 2021</h5>
               <p><em>North West University</em></p>
@@ -338,6 +324,23 @@
 
 
             </div><!-- Edn Resume Item -->
+
+              <div class="resume-item">
+                  <h4>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</h4>
+                  <h5>2021 - 2024</h5>
+                  <p><em>North West University</em></p>
+                  <p>During my studies in Information Technology,
+                      I gained exposure to various technologies and developed a wide range of skills.
+                  </p>
+                  <ul>
+                      <li>Spring Boot</li>
+                      <li>React</li>
+                      <li>Java</li>
+                      <li>C++</li>
+                      <li>C#</li>
+                      <li>SQL</li>
+                  </ul>
+              </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>Online Courses</h4>
