--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
 
         <h2>Rikus du Plessis</h2>
-        <p><span class="typed" data-typed-items="Software Developer"></span></p>
+        <p><span class="typed" data-typed-items="Software Developer, Problem Solver"></span></p>
       </div>
 
 
