Updated gitignore file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Rikus du Plessis</title>
+    <link rel="shortcut icon" type="image/png" href="assets/img/icon.png">
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 
 
@@ -36,7 +37,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <!--        <h1 class="sitename">Virtual Portfolio</h1>-->
+
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -160,8 +161,8 @@
                           <h4>Who am I?</h4>
                           <p>
                               I am a graduate software developer. I studied BSc Information Technology
-                              at the North-West University. I am a hard-working individual open to
-                              continuous learning. I enjoy problem-solving and have a strong
+                              at the North-West University. I am a motivated and hard-working individual
+                              committed to continuous learning. I enjoy problem-solving and have a strong
                               foundation in algorithms and data structures, which I utilize to write
                               clean and optimized code.
                           </p>
@@ -301,12 +302,12 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
-            <h3 class="resume-title">Summary</h3>
-            <div class="resume-item">
-              <p>I am a graduate software developer. I studied BSc Information Technology at the North-West University. I am a hard-working individual open to learning new things.
-                With a strong foundation in Java and a keen interest in continuous learning.
-                I am committed to delivering excellent work within the required time. And I enjoy working in a team toward a common goal.</p>
-            </div><!-- Edn Resume Item -->
+<!--            <h3 class="resume-title">Summary</h3>-->
+<!--            <div class="resume-item">-->
+<!--              <p>I am a graduate software developer. I studied BSc Information Technology at the North-West University. I am a hard-working individual open to learning new things.-->
+<!--                With a strong foundation in Java and a keen interest in continuous learning.-->
+<!--                I am committed to delivering excellent work within the required time. And I enjoy working in a team toward a common goal.</p>-->
+<!--            </div>&lt;!&ndash; Edn Resume Item &ndash;&gt;-->
 
 
             <h3 class="resume-title">Education</h3>
