Updated gitignore file

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-football"></i></div>
-              <h4 class="title"><a href="">Footbal</a></h4>
+              <h4 class="title"><a href="">Football</a></h4>
               <p class="description">Passionate about watching my football team.</p>
             </div>
           </div>
