Updated gitignore file

--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
                       <li>Developed REST endpoints</li>
                       <li>Implemented Hibernate ORM</li>
                       <li>Authorization and Authentication</li>
+                        <li>Oauth Google and Basic Auth</li>
                       <li>Role-Based Access Control</li>
                       <li>Password Management</li>
                       <li>Handling User Requests</li>
-                      <li>Implementing Security</li>
                       <li>Basic Authentication</li>
                       <li>Google Authentication integration</li>
                       <li>Action Logging</li>
