Updated gitignore file

--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@
                       <li>Developed REST endpoints</li>
                       <li>Implemented Hibernate ORM</li>
                       <li>Authorization and Authentication</li>
-                        <li>Oauth Google and Basic Auth</li>
+                            <ul>
+                                <li>Oauth (Google)</li>
+                                <li>Basic Auth</li>
+                            </ul>
                       <li>Role-Based Access Control</li>
                       <li>Password Management</li>
                       <li>Handling User Requests</li>
-                      <li>Basic Authentication</li>
-                      <li>Google Authentication integration</li>
                       <li>Action Logging</li>
                       <li>Database Design and Development</li>
                       <li>Setting up an email service for account confirmation during registration.</li>
