Updated gitignore file

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Rikus du Plessis</title>
     <link rel="shortcut icon" type="image/png" href="assets/img/icon.png">
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicon@2.14.0/devicon.min.css">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WVSZNTVL');</script>
+    <!-- End Google Tag Manager -->
 
 
 
@@ -72,67 +80,70 @@
 
     </section><!-- /Hero Section -->
 
-    <!-- ======= Interests Section ======= -->
+      <!-- ======= Interests Section ======= -->
 
-    <section id="interests" class="interests section-bg">
-      <div class="container">
-        <div class="container section-title" data-aos="fade-up">
+      <section id="interests" class="interests section-bg">
+          <div class="container">
+              <div class="container section-title" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Interest</h2>
-          <p>Exploring new passions and hobbies helps me stay balanced and inspired. Here are a some things I love to do in my free time</p>
-        </div>
+                  <div class="section-title">
+                      <h2>Interest</h2>
+                      <p>Exploring new passions and hobbies helps me stay balanced and inspired. Here are a some things I love to do in my free time</p>
+                  </div>
 
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-dumbbell"></i></div>
-              <h4 class="title"><a href="">Gym</a></h4>
-              <p class="description">Staying fit and active boosts my energy and keeps me focused.</p>
-            </div>
+                  <div class="row">
+                      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                          <div class="icon-box">
+                              <div class="icon"><i class="bx bx-dumbbell"></i></div>
+                              <h4 class="title"><a href="">Gym</a></h4>
+                              <p class="description">Staying fit and active boosts my energy and keeps me focused.</p>
+                          </div>
+                      </div>
+
+                      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                          <div class="icon-box">
+                              <div class="icon"><i class="bx bx-rocket"></i></div>
+                              <h4 class="title"><a href="">Stargazing</a></h4>
+                              <p class="description">On clear nights, you’ll find me with my telescope, gazing at the stars.
+                                  Exploring planets, constellations, and distant galaxies. </p>
+                          </div>
+                      </div>
+
+                      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                          <div class="icon-box">
+                              <div class="icon"><i class="bx bx-football"></i></div>
+                              <h4 class="title"><a href="">Football</a></h4>
+                              <p class="description">Passionate about watching my football team.</p>
+                          </div>
+                      </div>
+
+                      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                          <div class="icon-box">
+                              <div class="icon"><i class="bx bx-headphone"></i></div>
+                              <h4 class="title"><a href="">Music</a></h4>
+                              <p class="description">Music takes me away to realms unseen,
+                                  where every note creates a universe of its own.</p>
+                          </div>
+                      </div>
+                  </div>
+
+              </div>
+
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-rocket"></i></div>
-              <h4 class="title"><a href="">Stargazing</a></h4>
-              <p class="description">On clear nights, you’ll find me with my telescope, gazing at the stars.
-                  Exploring planets, constellations, and distant galaxies. </p>
-            </div>
+          <div class="slider-container">
+              <div class="slider">
+                  <img src="assets/img/Gym.jpg" alt="first" style="--pos: 1">
+                  <img src="assets/img/Stargazing.jpg" alt="second" style="--pos: 2">
+                  <img src="assets/img/Football.jpg" alt="third" style="--pos: 3">
+                  <img src="assets/img/Music.jpg" alt="fourth" style="--pos: 4">
+              </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-football"></i></div>
-              <h4 class="title"><a href="">Football</a></h4>
-              <p class="description">Passionate about watching my football team.</p>
-            </div>
-          </div>
+      </section>
+      
+      <!-- End Interests Section -->
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-headphone"></i></div>
-              <h4 class="title"><a href="">Music</a></h4>
-              <p class="description">Music takes me away to realms unseen,
-                  where every note creates a universe of its own.</p>
-            </div>
-          </div>
-        </div>
-
-        </div>
-
-      </div>
-
-        <div class="slider-container">
-            <div class="slider">
-                <img src="assets/img/Gym.jpg" alt="first" style="--pos: 1">
-                <img src="assets/img/Stargazing.jpg" alt="second" style="--pos: 2">
-                <img src="assets/img/Football.jpg" alt="third" style="--pos: 3">
-                <img src="assets/img/Music.jpg" alt="fourth" style="--pos: 4">
-            </div>
-        </div>
-
-    </section><!-- End Interests Section -->
 
 
       <!-- About Section -->
@@ -557,6 +568,11 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WVSZNTVL"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
 </body>
 
