Updated gitignore file

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <main class="main">
 
     <!-- Hero Section -->
+
     <section id="hero" class="hero section dark-background">
 
       <img src="assets/img/hero-img.jpg" alt="" data-aos="fade-in">
@@ -81,14 +82,12 @@
     </section><!-- /Hero Section -->
 
       <!-- ======= Interests Section ======= -->
-
       <section id="interests" class="interests section-bg">
           <div class="container">
               <div class="container section-title" data-aos="fade-up">
-
                   <div class="section-title">
-                      <h2>Interest</h2>
-                      <p>Exploring new passions and hobbies helps me stay balanced and inspired. Here are a some things I love to do in my free time</p>
+                      <h2>Interests</h2>
+                      <p class="lead">Exploring new passions and hobbies helps me stay balanced and inspired. Here are some things I love to do in my free time.</p>
                   </div>
 
                   <div class="row">
@@ -104,8 +103,7 @@
                           <div class="icon-box">
                               <div class="icon"><i class="bx bx-rocket"></i></div>
                               <h4 class="title"><a href="">Stargazing</a></h4>
-                              <p class="description">On clear nights, you’ll find me with my telescope, gazing at the stars.
-                                  Exploring planets, constellations, and distant galaxies. </p>
+                              <p class="description">On clear nights, you'll find me with my telescope, exploring planets, constellations, and distant galaxies.</p>
                           </div>
                       </div>
 
@@ -126,10 +124,9 @@
                           </div>
                       </div>
                   </div>
-
               </div>
-
           </div>
+
 
           <div class="slider-container">
               <div class="slider">
@@ -145,8 +142,6 @@
       <!-- End Interests Section -->
 
 
-
-      <!-- About Section -->
       <!-- About Section -->
       <section id="about" class="section about">
           <div class="section-title">
@@ -459,7 +454,9 @@
 
       </div>
 
-    </section><!-- /Resume Section -->
+    </section>
+
+      <!-- End of Resume Section -->
 
       <!-- Download CV Section -->
       <section id="resources" class="resources section">
@@ -468,27 +465,25 @@
                   <h2>Resources</h2>
               </div>
 
-              <!-- Centered Download CV -->
-              <div class="col-md-12 mb-4">
-                  <div class="text-center">
-                      <h3>Download CV</h3>
-                      <p>Click the button below to download my CV.</p>
-                      <a href="assets/cv/Rikus_du_Plessis_CV.pdf" class="btn btn-primary" download="Rikus_du_Plessis_CV.pdf">
-                          <i class="bx bx-download"></i> Download CV
-                      </a>
-                  </div>
+              <!-- Download CV Card -->
+              <div class="download-card">
+                  <h3 class="lead">Download My CV</h3>
+                  <p class="description">Click the button below to get my latest CV.</p>
+                  <a href="assets/cv/Rikus_du_Plessis_CV.pdf" class="btn btn-download" download="Rikus_du_Plessis_CV.pdf">
+                      <i class="bx bx-download"></i> Download CV
+                  </a>
               </div>
           </div>
       </section>
 
 
-    <!-- Contact Section -->
+      <!-- Contact Section -->
     <section id="contact" class="contact section">
 
       <!-- Section Title -->
        <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Feel free to reach out through any of the channels below.
+           <p class="lead">Feel free to reach out through any of the channels below.
           I'm always excited to connect with fellow developers, potential clients, and collaborators.</p>
       </div><!-- End Section Title -->
 
